FIX: remove developer dependencies from extras

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,75 +40,18 @@ name = "ampform-dpd"
 requires-python = ">=3.9"
 
 [project.optional-dependencies]
-dev = [
-    "ampform-dpd[doc]",
-    "ampform-dpd[jupyter]",
-    "ampform-dpd[sty]",
-    "ampform-dpd[test]",
-    "sphinx-autobuild",
-]
-doc = [
-    "ampform-dpd[notebooks]",
-    "myst-nb",
-    "sphinx-api-relink",
-    "sphinx-book-theme",
-    "sphinx-codeautolink[ipython]",
-    "sphinx-copybutton",
-    "sphinx-design",
-    "sphinx-pybtex-etal-style",
-    "sphinx-togglebutton",
-    "sphinxcontrib-bibtex",
-]
 jax = [
     "numpy==1.*",
     "tensorwaves[jax]",
 ]
-jupyter = [
-    "ampform-dpd[doc]",
-    "jupyterlab",
-    "jupyterlab-code-formatter >=3.0.0",
-    "jupyterlab-git",
-    "jupyterlab-lsp",
-    "jupyterlab-myst",
-    "python-lsp-ruff",
-    "python-lsp-server[rope]",
-]
-notebooks = [
-    "graphviz",
-    "ipympl",
-    "ipywidgets",
-    "matplotlib",
-    "pandas",
-    "tensorwaves[phsp]",
-    "tqdm",
-]
 numba = [
     "tensorwaves[numba]",
-]
-sty = [
-    "ampform-dpd[types]",
-    "mypy",
-    "ruff",
 ]
 tensorflow = [
     "ampform-dpd[tf]",
 ]
-test = [
-    "nbmake",
-    "numpy",
-    "pytest",
-    "pytest-cov",
-    "pytest-xdist",
-]
 tf = [
     "tensorwaves[tf]",
-]
-types = [
-    "docutils",
-    "pybtex",
-    "pytest",
-    "sphinx",
-    "sphinx-api-relink",
 ]
 
 [project.readme]
@@ -120,6 +63,66 @@ Changelog = "https://github.com/ComPWA/ampform-dpd/releases"
 Documentation = "https://compwa.github.io/ampform-dpd"
 Source = "https://github.com/ComPWA/ampform-dpd"
 Tracker = "https://github.com/ComPWA/ampform-dpd/issues"
+
+[dependency-groups]
+dev = [
+    "ruff",
+    "sphinx-autobuild",
+    {include-group = "doc"},
+    {include-group = "jupyter"},
+    {include-group = "style"},
+    {include-group = "test"},
+]
+doc = [
+    "myst-nb",
+    "sphinx-api-relink",
+    "sphinx-book-theme",
+    "sphinx-codeautolink[ipython]",
+    "sphinx-copybutton",
+    "sphinx-design",
+    "sphinx-pybtex-etal-style",
+    "sphinx-togglebutton",
+    "sphinxcontrib-bibtex",
+    {include-group = "notebooks"},
+]
+jupyter = [
+    "jupyterlab",
+    "jupyterlab-code-formatter >=3.0.0",
+    "jupyterlab-code-formatter",
+    "jupyterlab-git",
+    "jupyterlab-lsp",
+    "jupyterlab-myst",
+    "python-lsp-ruff",
+    "python-lsp-server[rope]",
+    {include-group = "doc"},
+]
+notebooks = [
+    "graphviz",
+    "ipympl",
+    "ipywidgets",
+    "matplotlib",
+    "pandas",
+    "tensorwaves[phsp]",
+    "tqdm",
+]
+style = [
+    "mypy",
+    {include-group = "types"},
+]
+test = [
+    "nbmake",
+    "numpy",
+    "pytest",
+    "pytest-cov",
+    "pytest-xdist",
+]
+types = [
+    "docutils",
+    "pybtex",
+    "pytest",
+    "sphinx",
+    "sphinx-api-relink",
+]
 
 [tool.setuptools]
 include-package-data = false
