DX: run `pyright` in `tox -e sty` job

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,6 +176,8 @@ reportUnusedFunction = true
 reportUnusedImport = true
 reportUnusedVariable = true
 typeCheckingMode = "strict"
+venv = ".venv"
+venvPath = "."
 
 [tool.pytest.ini_options]
 addopts = [
@@ -471,7 +473,4 @@ allowlist_externals =
 commands =
     pre-commit run --all-files {posargs}
 description = Perform all linting, formatting, and spelling checks
-setenv =
-    {[testenv]setenv}
-    SKIP = pyright
 """
