--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,7 @@
   "python.analysis.autoImportCompletions": false,
   "python.analysis.inlayHints.pytestParameters": true,
   "python.terminal.activateEnvironment": false,
-  "python.testing.pytestArgs": ["--color=no"],
+  "python.testing.pytestArgs": ["--color=no", "--verbose", "--verbose"],
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
   "redhat.telemetry.enabled": false,
