DX: ignore all `PytestUnraisableExceptionWarning`s

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -188,6 +188,7 @@ doctest_optionflags = [
 ]
 filterwarnings = [
     "error",
+    "ignore::pytest.PytestUnraisableExceptionWarning",
     "ignore:The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
     "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning",
 ]
