--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "ampform >=0.15.1", # aslatex with keyword arguments
     "attrs >=20.1.0", # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
     "cloudpickle",
-    "numpy~=1.0",
+    "numpy",
     "qrules >=0.10.0",
     "sympy >=1.10", # module sympy.printing.numpy and array expressions with shape kwarg
     "tensorwaves[jax]",
@@ -188,6 +188,7 @@ doctest_optionflags = [
 ]
 filterwarnings = [
     "error",
+    "ignore::pytest.PytestUnraisableExceptionWarning",
     "ignore:The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
     "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning",
 ]
@@ -300,7 +301,7 @@ ignore-names = [
     "PLW2901",
     "S101",
     "T20",
-    "TCH00",
+    "TC00",
 ]
 "docs/*" = [
     "E402",
@@ -469,3 +470,6 @@ commands =
     pre-commit run --all-files {posargs}
 description = Perform all linting, formatting, and spelling checks
 """
+
+[tool.uv]
+constraint-dependencies = ["numpy~=1.0"]
