FIX: downgrade `pygments` for `sphinx-codeautolink`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -470,4 +470,7 @@ description = Perform all linting, formatting, and spelling checks
 """
 
 [tool.uv]
-constraint-dependencies = ["numpy~=1.0"]
+constraint-dependencies = [
+    "numpy~=1.0",
+    "pygments!=2.19.*", # https://github.com/felix-hilden/sphinx-codeautolink/issues/152
+]
