--- a/codecov.yml
+++ b/codecov.yml
@@ -9,25 +9,18 @@ coverage:
   status:
     project:
       default:
-        # basic
-        target: 50% # can't go below this percentage
-        threshold: 1% # allow drops by this percentage
+        target: 50%
+        threshold: 1%
         base: auto
-        # advanced
-        branches: []
         if_no_uploads: error
         if_not_found: success
         if_ci_failed: error
         only_pulls: false
-        flags: []
-        paths: []
     patch:
       default:
-        # basic
         target: 0
         threshold: 5%
         base: auto
-        # advanced
         branches: null
         if_no_uploads: error
         if_not_found: success
