DX: activate VS Code coverage extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -17,6 +17,7 @@
     "ms-vsliveshare.vsliveshare",
     "oijaz.unicode-latex",
     "redhat.vscode-yaml",
+    "ryanluker.vscode-coverage-gutters",
     "soulcode.vscode-unwanted-extensions",
     "stkb.rewrap",
     "streetsidesoftware.code-spell-checker",
