--- a/pyproject.toml
+++ b/pyproject.toml
@@ -417,6 +417,7 @@ commands = [
     ],
 ]
 description = "Build documentation with Sphinx"
+pass_env = ["*"]
 
 [tool.tox.env.doclive]
 allowlist_externals = ["sphinx-autobuild"]
@@ -444,6 +445,7 @@ commands = [
     ],
 ]
 description = "Set up a server to directly preview changes to the HTML pages"
+pass_env = ["*"]
 
 [tool.tox.env.docnb]
 base = ["tool.tox.env.doc"]
@@ -491,6 +493,7 @@ allowlist_externals = ["pre-commit"]
 base = []
 commands = [["pre-commit", "run", "--all-files", {replace = "posargs", extend = true}]]
 description = "Perform all linting, formatting, and spelling checks"
+pass_env = ["*"]
 
 [tool.tox.labels]
 doc = [
