MAINT: update to ComPWA/ampform@0fe1065c for `cached` module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -512,3 +512,6 @@ test = [
 constraint-dependencies = [
     "numpy~=1.0",
 ]
+
+[tool.uv.sources]
+ampform = {git = "https://github.com/ComPWA/ampform", rev = "0fe1065c"}
