FEAT: collect cached SymPy functions in `cached` module (#158)
* ENH: render pcolormesh figures with `rasterized`
* ENH: use cached substitution, doit, and lambdify in notebooks
* FEAT: define `ampform_dpd.io.cached` module with aliases
* MAINT: define `STATIC_PAGE` with walrus operator
* MAINT: set AmpForm v0.15.7 as minimal version
* MAINT: update link to JAX intersphinx inventory
* MAINT: update to ComPWA/ampform@0fe1065c for `cached` module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    "ampform >=0.15.4", # aslatex with keyword arguments
+    "ampform >=0.15.7", # aslatex with keyword arguments; ampform.sympy.cached module
     "attrs >=20.1.0", # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
     "cloudpickle",
     "numpy",
@@ -328,7 +328,7 @@ ignore-names = [
     "RUF100",
 ]
 "setup.py" = ["D100"]
-"src/ampform_dpd/io/__init__.py" = ["S403"]
+"src/ampform_dpd/io/cached.py" = ["S403"]
 "src/ampform_dpd/io/serialization/amplitude.py" = ["E741"]
 "src/ampform_dpd/io/serialization/format.py" = ["E741"]
 "tests/*" = [
@@ -512,3 +512,6 @@ test = [
 constraint-dependencies = [
     "numpy~=1.0",
 ]
+
+[tool.uv.sources]
+ampform = {git = "https://github.com/ComPWA/ampform", rev = "0fe1065c"}
