--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "ampform >=0.15.7", # aslatex with keyword arguments; ampform.sympy.cached module
     "attrs >=20.1.0", # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
     "cloudpickle",
+    "frozendict",
     "numpy",
     "qrules >=0.10.0",
     "sympy >=1.10", # module sympy.printing.numpy and array expressions with shape kwarg
@@ -514,4 +515,4 @@ constraint-dependencies = [
 ]
 
 [tool.uv.sources]
-ampform = {git = "https://github.com/ComPWA/ampform", rev = "0fe1065c"}
+ampform = {git = "https://github.com/ComPWA/ampform", rev = "a043ffe7"}
