--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
     with:
       coverage-target: ampform_dpd
       macos-python-version: "3.10"
+      multithreaded: false
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
