DX: do not run notebooks under `.virtual_documents`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -346,6 +346,7 @@ addopts = [
     "--doctest-continue-on-failure",
     "--doctest-modules",
     "--durations=3",
+    "--ignore-glob=.virtual_documents",
     "--ignore=docs/conf.py",
     "-m not slow",
 ]
