--- a/pyproject.toml
+++ b/pyproject.toml
@@ -169,10 +169,10 @@ executor.type = "uv"
 help = "Run all continuous integration (CI) tasks locally"
 ignore_fail = "return_non_zero"
 sequence = [
-    "cov",
-    "docnb-force",
-    "linkcheck",
     "style",
+    "linkcheck",
+    "docnb-force",
+    "cov",
     "test-all",
 ]
 
@@ -346,6 +346,7 @@ addopts = [
     "--doctest-continue-on-failure",
     "--doctest-modules",
     "--durations=3",
+    "--ignore-glob=.virtual_documents",
     "--ignore=docs/conf.py",
     "-m not slow",
 ]
